digiKam 6.3.0 - Release date: 2019-??-??

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 410501 - Dark Themes show white frames with light grey text in menu etc. - not readible.
002 ==> 382646 - XMP sidecar file doesn't contain GPS tags.
003 ==> 393635 - Segfault when saving TIFF after modifying RAW.
004 ==> 